public/platform/v0.15/_sources/reference/tmlt/analytics/tuner/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


************
tuner
************

.. py:module:: tmlt.analytics.tuner

.. autoapi-nested-parse::

   |PRO| Interface for tuning SessionPrograms.

   .. |Tunable| replace:: :class:`~.tuner.Tunable`

   .. warning::

       SessionProgramTuner is intended to be used for tuning DP programs. **It does not
       provide any privacy guarantees.** It is recommended to use synthetic or historical
       data for tuning instead of the data that will be used in production.

   The :class:`~.tuner.SessionProgramTuner` class is an abstract base class that
   defines the interface for tuning :class:`~.SessionProgram`\ s. To tune a specific
   program, users should subclass :class:`~.tuner.SessionProgramTuner`, passing their
   :class:`~.SessionProgram` as the ``program`` class argument.

   .. ::
       >>> import math
       >>> from tmlt.analytics.keyset import KeySet
       >>> from tmlt.analytics.metrics import MedianRelativeError
       >>> from tmlt.analytics.privacy_budget import PureDPBudget
       >>> from tmlt.analytics.program import SessionProgram
       >>> from tmlt.analytics.protected_change import AddOneRow
       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.tuner import SessionProgramTuner, Tunable, baseline, metric
       >>> from tmlt.analytics.no_privacy_session import NoPrivacySession
       >>> from tmlt.analytics.query_builder import QueryBuilder
       >>> from pyspark.sql import DataFrame, GroupedData
       >>> from pyspark.sql import SparkSession
       >>> import pyspark.sql.functions as sf
       >>> from typing import Dict
       >>> spark = SparkSession.builder.getOrCreate()

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class Outputs:
   ...         b_sum: DataFrame
   ...     class Parameters:
   ...         low: int
   ...         high: int
   ...     def session_interaction(self, session: Session):
   ...         low = self.parameters["low"]
   ...         high = self.parameters["high"]
   ...         a_values = KeySet.from_dict({"a": ["x", "y"]})
   ...         sum_query = QueryBuilder("protected_df").groupby(a_values).sum("b", low, high)
   ...         b_sum = session.evaluate(sum_query, self.privacy_budget)
   ...         return {"b_sum": b_sum}
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     baseline_options = {
   ...         "use_clamping_bounds": NoPrivacySession.Options(
   ...             enforce_clamping_bounds=True
   ...         ),
   ...         "ignore_clamping_bounds": NoPrivacySession.Options(
   ...             enforce_clamping_bounds=False
   ...         ),
   ...     }
   ...
   ...     @baseline("custom_baseline")
   ...     def no_clamping_bounds_baseline(protected_inputs: Dict[str, DataFrame]) -> Dict[str, DataFrame]:
   ...         df = protected_inputs["protected_df"]
   ...         sum_value = df.groupBy("a").agg(sf.sum("b").alias('b_sum'))
   ...         return {"b_sum": sum_value}
   ...
   ...     @joined_output_metric(name="root_mean_squared_error", output="b_sum", join_columns=["a"], baseline="custom_baseline")
   ...     def compute_rmse(joined_output: DataFrame):
   ...         err = sf.col("b_sum_dp") - sf.col("b_sum_baseline")
   ...         rmse = joined_output.agg(sf.sqrt(sf.avg(sf.pow(err, sf.lit(2)))).alias("rmse"))
   ...         return rmse.collect()[0]["rmse"]
   ...
   ...     metrics = [
   ...         MedianRelativeError(
   ...             output="b_sum",
   ...             measure_column="b_sum",
   ...             name=f"mre_{index}",
   ...             join_columns=["a"],
   ...             baseline=baseline,
   ...         )
   ...         for index, baseline in enumerate(
   ...             list(baseline_options.keys()) + ["custom_baseline"]
   ...         )
   ...     ] # This is required to use the built-in metrics


   Just like a :class:`~.SessionProgram`, once a subclass of
   :class:`~.tuner.SessionProgramTuner` is defined, it can be instantiated using the
   automatically-generated builder for that class. Unlike a :class:`~.SessionProgram`,
   you can pass |Tunable| objects to the builder methods instead of
   concrete values.

   >>> protected_df = spark.createDataFrame([("x", 2), ("y", 4)], ["a", "b"])
   >>> tuner = (
   ...     Tuner.Builder()
   ...     .with_privacy_budget(Tunable("budget"))
   ...     .with_private_dataframe("protected_df", protected_df, AddOneRow())
   ...     .with_parameter("low", 0)
   ...     .with_parameter("high", Tunable("high"))
   ...     .build()
   ... )

   The :meth:`~.tuner.SessionProgramTuner.outputs` method can be used to run the program
   to get the outputs of the DP and baseline programs.

   >>> dp_outputs, baseline_outputs = (
   ...     tuner.outputs({"budget": PureDPBudget(1), "high": 1})
   ... )

   The :meth:`~.tuner.SessionProgramTuner.error_report` method on the tuner can be used to
   run the program to get the DP and baseline outputs as well as the metrics defined in
   the Tuner class.

   >>> tuner.error_report({"budget": PureDPBudget(1), "high": 1}).show()  # doctest: +SKIP
   Error report ran with budget PureDPBudget(epsilon=1) and the following tunable parameters:
   budget: PureDPBudget(epsilon=1)
   high: 1
   and the following additional parameters:
   low: 0
   <BLANKLINE>
   Metric results:
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |   Value | Metric                  | Baseline               | Description                                           |
   +=========+=========================+========================+=======================================================+
   |    0    | mre                     | use_clamping_bounds    | Median relative error for column b_sum of table b_sum |
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |    0.5  | mre                     | ignore_clamping_bounds | Median relative error for column b_sum of table b_sum |
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |    0.5  | mre                     | custom_baseline        | Median relative error for column b_sum of table b_sum |
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |    0    | root_mean_squared_error | use_clamping_bounds    | User-defined metric (no description)                  |
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |    3.16 | root_mean_squared_error | ignore_clamping_bounds | User-defined metric (no description)                  |
   +---------+-------------------------+------------------------+-------------------------------------------------------+
   |    3.16 | root_mean_squared_error | custom_baseline        | User-defined metric (no description)                  |
   +---------+-------------------------+------------------------+-------------------------------------------------------+











Functions
=========

.. list-table::

   * - :func:`.baseline`
     - Decorator to define a custom baseline method for :class:`~.SessionProgramTuner`.
   * - :func:`.metric`
     - Decorator to define a custom metric method for :class:`~.SessionProgram`.
   * - :func:`.view`
     - Views of the output table to be used across metrics in place of program outputs.
   * - :func:`.single_output_metric`
     - Decorator to define a custom metric method for :class:`~.SessionProgram`.
   * - :func:`.joined_output_metric`
     - Decorator to define a custom metric method for :class:`~.SessionProgram`.

.. py:function:: baseline(name)

   Decorator to define a custom baseline method for :class:`~.SessionProgramTuner`.

   To use the "default" baseline in addition to this custom baseline,
   you need to separately specify `"default": NoPrivacySession.Options()`
   in ``baseline_options`` class variable.

   :param name: A name for the custom baseline.

   ..

       >>> from tmlt.analytics.session import Session

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         ...
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @baseline("custom_baseline")
   ...     def custom_baseline(
   ...         protected_inputs: Dict[str, DataFrame],
   ...     ) -> Dict[str, DataFrame]:
   ...         ...
   ...     @baseline("another_custom_baseline")
   ...     def another_custom_baseline(
   ...         self,
   ...         protected_inputs: Dict[str, DataFrame],
   ...         unprotected_inputs: Dict[str, DataFrame],
   ...     ) -> Dict[str, DataFrame]:
   ...         # If the program has unprotected inputs or parameters, the custom
   ...         # baseline method can take them as an argument.
   ...         ...
   ...     baseline_options = {
   ...         "default": NoPrivacySession.Options()
   ...     }  # This is required to keep the default baseline



.. py:function:: metric(name, description = None, grouping_columns = None, measure_column = None, empty_value = None)

   Decorator to define a custom metric method for :class:`~.SessionProgram`.

   This decorator corresponds to :class:`~.metrics.Metric`, and is the most generic
   custom metric decorator. If you can use the :meth:`joined_output_metric` or
   :meth:`single_output_metric` decorators instead, they will likely be easier to
   use.

   The decorated function must have the following parameters:

   * ``dp_outputs``: a dictionary of DataFrames containing the program's outputs.
   * ``baseline_outputs``: a dictionary mapping baseline names to dictionaries of
     output DataFrames.

   It may also have the following optional parameters:

   * ``self``: a reference to the :class:`~.metrics.Metric` object constructed from
     this function.
   * ``result_column_name``: if the function returns a dataframe, the metric results
     should be in a column with this name
   * ``unprotected_inputs``: A dictionary containing the program's unprotected inputs.
   * ``program_parameters``: A dictionary containing the program's parameters.

   The function should return a single numeric value if there are no grouping columns,
   or a dataframe with one column for each grouping column, and one numeric result
   column with the specified name.


   Alternatively, you can use :class:`~.metrics.Metric` directly.

   To use the built-in metrics in addition to this custom metric,
   you can separately specify ``metrics`` class variable.

   :param name: A name for the metric.
   :param description: A description of the metric.
   :param grouping_columns: If specified, the metric should group the outputs by the
                            given columns, and calculate the metric for each group.
   :param measure_column: If specified, the column in the outputs to measure.
   :param empty_value: If all dp and baseline outputs are empty, the metric will
                       return this value.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> from pyspark.sql import DataFrame
       >>> from typing import Dict

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         return {"output_df": dp_output}
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @metric(name="custom_metric")
   ...     def custom_metric(
   ...         dp_outputs: Dict[str, DataFrame],
   ...         baseline_outputs: Dict[str, Dict[str, DataFrame]]
   ...     ):
   ...         # If the program has unprotected inputs and/or parameters, the custom
   ...         #  metric method can take them as an argument.
   ...         ...
   ...     metrics = [
   ...         MedianAbsoluteError(
   ...             output="output_df",
   ...             join_columns=["join_column"],
   ...             measure_column="Y"
   ...         ),
   ...     ]  # You can mix custom and built-in metrics.



.. py:function:: view(name)

   Views of the output table to be used across metrics in place of program outputs.

   Alternatively, you can specify as list using
   :data:`tmlt.analytics.tuner.SessionProgramTuner.views` class variable.

   If the program has outputs, unprotected inputs or parameters, the view method
   can pass ``outputs``, ``unprotected_inputs`` and/or ``program_parameters`` as
   arguments and the value gets auto-populated from the program.

   :param name: A name for the output view.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import MedianRelativeError

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         ...
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @view("output_view")
   ...     def custom_view1(
   ...         outputs: Dict[str, DataFrame],
   ...     ) -> DataFrame:
   ...         ...
   ...     @view("another_output_view")
   ...     def custom_view2(
   ...         self,
   ...         outputs: Dict[str, DataFrame],
   ...         unprotected_inputs: Dict[str, DataFrame],
   ...     ) -> DataFrame:
   ...         ...
   ...     metrics = [
   ...         MedianRelativeError(
   ...             output="output_view",
   ...             join_columns=["x"],
   ...             measure_column="a_sum"
   ...         ),
   ...     ] # The view can be used instead of output when metric is defined



.. py:function:: single_output_metric(name, description = None, baseline = None, output = None, grouping_columns = None, measure_column = None, empty_value = None)

   Decorator to define a custom metric method for :class:`~.SessionProgram`.

   This decorator corresponds to :class:`~.metrics.SingleOutputMetric`.
   If you can use the :meth:`joined_output_metric` decorator instead, it will likely
   be easier to use.

   The decorated function must have the following parameters:

   * ``dp_output``: the chosen DP output DataFrame.
   * ``baseline_outputs``: the chosen baseline output DataFrame.

   It may also have the following optional parameters:

   * ``self``: a reference to the :class:`~.metrics.Metric` object
     constructed from this function.
   * ``result_column_name``: if the function returns a DataFrame, the metric results
     should be in a column with this name
   * ``unprotected_inputs``: A dictionary containing the program's unprotected inputs.
   * ``program_parameters``: A dictionary containing the program's parameters.

   The function should return a single numeric value if there are no grouping columns,
   or a dataframe with one column for each grouping column, and one numeric result
   column with the specified name.


   Alternatively, you can use :class:`~.metrics.SingleOutputMetric`
   directly.

   To use the built-in metrics in addition to this custom metric,
   you can separately specify ``metrics`` class variable.

   :param name: A name for the metric.
   :param description: A description of the metric.
   :param baseline: The name of the baseline program used for the error report.
                    If None, the tuner must have a single baseline (which will be used).
   :param output: The name of the program output to be used for the metric. If None,
                  the program must have only one output (which will be used).
   :param grouping_columns: If specified, the metric should group the outputs by the
                            given columns, and calculate the metric for each group.
   :param measure_column: If specified, the column in the outputs to measure.
   :param empty_value: If all dp and baseline outputs are empty, the metric will
                       return this value.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> from pyspark.sql import DataFrame
       >>> from typing import Dict

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         return {"output_df": dp_output}
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @single_output_metric(name="custom_metric")
   ...     def custom_metric(
   ...         dp_output: DataFrame,
   ...         baseline_output: DataFrame
   ...     ):
   ...         # If the program has unprotected inputs and/or parameters, the custom
   ...         #  metric method can take them as an argument.
   ...         ...
   ...     metrics = [
   ...         MedianAbsoluteError(
   ...             output="output_df",
   ...             join_columns=["join_column"],
   ...             measure_column="Y"
   ...         ),
   ...     ]  # You can mix custom and built-in metrics.



.. py:function:: joined_output_metric(name, join_columns, description = None, baseline = None, output = None, grouping_columns = None, measure_column = None, empty_value = None, join_how = 'inner', dropna_columns = None, indicator_column_name = None)

   Decorator to define a custom metric method for :class:`~.SessionProgram`.

   This decorator corresponds to :class:`~.metrics.JoinedOutputMetric`.

   The decorated function must have the following parameters:

   * ``joined_output``: A DataFrame created by joining the selected DP and baseline
     outputs.

   It may also have the following optional parameters:

   * ``self``: a reference to the :class:`~.metrics.Metric` object
     constructed from this function.
   * ``result_column_name``: if the function returns a dataframe, the metric results
     should be in a column with this name
   * ``unprotected_inputs``: A dictionary containing the program's unprotected inputs.
   * ``program_parameters``: A dictionary containing the program's parameters.

   The function should return a single numeric value if there are no grouping columns,
   or a dataframe with one column for each grouping column, and one numeric result
   column with the specified name.


   Alternatively, you can use :class:`~.metrics.JoinedOutputMetric` directly.

   To use the built-in metrics in addition to this custom metric,
   you can separately specify ``metrics`` class variable.

   :param name: A name for the metric.
   :param join_columns: The columns to join on.
   :param description: A description of the metric.
   :param baseline: The name of the baseline program used for the error report.
                    If None, the tuner must have a single baseline (which will be used).
   :param output: The name of the program output to be used for the metric. If None,
                  the program must have only one output (which will be used).
   :param grouping_columns: If specified, the metric should group the outputs by the
                            given columns, and calculate the metric for each group.
   :param measure_column: If specified, the column in the outputs to measure.
   :param empty_value: If all dp and baseline outputs are empty, the metric will
                       return this value.
   :param join_how: The type of join to perform. Must be one of "left",
                    "right", "inner", "outer". Defaults to "inner".
   :param dropna_columns: If specified, rows with nulls in these columns will be
                          dropped.
   :param indicator_column_name: If specified, we will add a column with the
                                 specified name to the joined data that contains either "dp",
                                 "baseline", or "both" to indicate where the values in the row came
                                 from.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import MedianAbsoluteError
       >>> from pyspark.sql import DataFrame
       >>> from typing import Dict

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         return {"output_df": dp_output}
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @joined_output_metric(name="custom_metric", join_columns=["join_column"])
   ...     def custom_metric(
   ...         joined_output: DataFrame,
   ...     ):
   ...         # If the program has unprotected inputs and/or parameters, the custom
   ...         #  metric method can take them as an argument.
   ...         ...
   ...     metrics = [
   ...         MedianAbsoluteError(
   ...             output="output_df",
   ...             join_columns=["join_column"],
   ...             measure_column="Y"
   ...         ),
   ...     ]  # You can mix custom and built-in metrics.




Classes
=======

.. list-table::

   * - :class:`.SessionProgramTuner`
     - Base class for defining an object to tune inputs to a :class:`~.SessionProgram`.
   * - :class:`.Tunable`
     - Named placeholder for a single input to a :class:`~.SessionProgramTuner.Builder`.
   * - :class:`.View`
     - Wrapper to allow users to define a view of the output table.
   * - :class:`.ErrorReport`
     - Output of a single error report run.
   * - :class:`.MultiErrorReport`
     - Output of an error report run across multiple input combinations.
   * - :class:`.UnprotectedInput`
     - An unprotected input that was used for an :class:`~.ErrorReport`.
   * - :class:`.ProtectedInput`
     - A protected input that was used for an :class:`~.ErrorReport`.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: SessionProgramTuner(builder)
   :canonical: tmlt.analytics.tuner._tuner.SessionProgramTuner


   Base class for defining an object to tune inputs to a :class:`~.SessionProgram`.

   .. note::

       |PRO_NOTE|


   SessionProgramTuners should not be directly constructed. Instead, users should
   create a subclass of :class:`SessionProgramTuner`, then construct their
   :class:`SessionProgramTuner` using the auto-generated :class:`Builder` attribute
   of the subclass.




   
   ..
       SPDX-License-Identifier: CC-BY-SA-4.0
       Copyright Tumult Labs 2024

   .. TODO(#3272): This prevents setting :canonical: on the copy of various docs
          that appear in the deprecated query_expr module; once that module is removed,
          this logic can go away.


   .. py:class:: Builder




      The builder for a specific subclass of SessionProgramTuner.







      .. automethod:: __init__
      .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

         Add a tunable private dataframe to the builder.


      .. py:method:: with_public_dataframe(source_id, dataframe)

         Add a tunable public dataframe to the builder.


      .. py:method:: with_parameter(name, value)

         Set the value of a parameter.


      .. py:method:: build()

         Returns an instance of the matching ``SessionProgramTuner`` subtype.


      .. py:method:: with_id_space(id_space)

         Adds an identifier space.

         This defines a space of identifiers that map 1-to-1 to the identifiers
         being protected by a table with the :class:`~.AddRowsWithID` protected
         change. Any table with such a protected change must be a member of some
         identifier space.


      .. py:method:: with_privacy_budget(privacy_budget)

         Set the privacy budget for the object being built.




   .. py:attribute:: baseline_options
      :type:  Optional[Union[Dict[str, tmlt.analytics.no_privacy_session.NoPrivacySession.Options], tmlt.analytics.no_privacy_session.NoPrivacySession.Options]]
      :value: None


      Configuration for how baseline outputs are computed.

      By default, a SessionProgramTuner computes both the DP outputs and the baseline
      outputs for a SessionProgram to compute metrics. The baseline outputs are computed
      by calling the :meth:`~.session_interaction` method with a
      :class:`~.NoPrivacySession`. The ``baseline_options`` attribute allows you to
      override the default options for the :class:`~.NoPrivacySession` used to
      compute the baseline. You can also specify multiple configurations to compute
      the baselines with different options. When multiple baseline configurations are
      specified, the metrics are computed with respect to each of the baseline
      configurations (unless specified otherwise in the metric definitions).

      To override the default baseline options
      (see :class:`~.NoPrivacySession.Options`), you can set this to
      an :class:`~.NoPrivacySession.Options` object.

      If you want to specify multiple baseline configurations, you can set this to a
      dictionary mapping baseline names to :class:`~.NoPrivacySession.Options`.

   .. py:attribute:: metrics
      :type:  Optional[List[tmlt.analytics.metrics.Metric]]
      :value: None


      A list of metrics to compute in each ``error_report``.

   .. py:attribute:: views
      :type:  Optional[List[View]]
      :value: None


      A list of :class:`~.View` on output tables.

   .. py:attribute:: program
      :type:  Type[tmlt.analytics.program.SessionProgram]

      A subclass of :class:`~.SessionProgram` to be tuned.


   .. py:property:: tunables
      :type: List[Tunable]

      Returns a list of tunable inputs associated with this tuner.


   .. py:method:: get_baselines()
      :classmethod:


      Return all baselines defined in the class.

      If no baseline options or custom baselines are specified, returns
      the dictionary mapping 'default` baseline with default
      :class:`~.NoPrivacySession` configuration options. Otherwise, retrieves
      baselines specified using the ``baseline_options`` class variable and
      ``@baseline`` decorator and returns a dictionary mapping baseline names to
      either Options objects or callables for custom baselines.

      :param cls: The class to search for custom baselines.

      :raises ValueError: If baseline options are not distinct or not of appropriate type.


   .. py:method:: outputs(tunable_values = None)

      Computes all outputs for a single run.

      :param tunable_values: A dictionary mapping names of |Tunable|\ s
                             to concrete values to use for this run. Every |Tunable| used
                             in building this tuner must have a value in this dictionary. This
                             can be None only if no |Tunable|\ s were used.


   .. py:method:: error_report(tunable_values = None)

      Computes DP outputs, baseline outputs, and metrics for a single run.

      :param tunable_values: A dictionary mapping names of |Tunable|\ s to concrete
                             values to use for this error report. Every |Tunable| used in building
                             this tuner must have a value in this dictionary. This can be None only
                             if no |Tunable|\ s were used.


   .. py:method:: multi_error_report(tunable_values_list)

      Runs the ``error_report`` for each set of values for the |Tunable|\ s.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: Tunable
   :canonical: tmlt.analytics.tuner._tuner.Tunable


   Named placeholder for a single input to a :class:`~.SessionProgramTuner.Builder`.

   .. note::

       |PRO_NOTE|

   When a |Tunable| is passed to a :class:`~.SessionProgramTuner.Builder`, it
   is replaced with the concrete values for the tunable parameter when building
   :class:`~.SessionProgram` s inside of methods like
   :meth:`~.tuner.SessionProgramTuner.error_report` and
   :meth:`~.tuner.SessionProgramTuner.multi_error_report`.





   .. py:attribute:: name
      :type:  str

      Name of the tunable parameter.




   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: View(name, func)
   :canonical: tmlt.analytics.tuner._tuner.View


   Wrapper to allow users to define a view of the output table.

   If the program has outputs, unprotected inputs or parameters, the view method
   can pass ``outputs``, ``unprotected_inputs`` and/or ``program_parameters`` arguments
   and the value gets auto-populated from the program.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import MedianRelativeError

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         ...
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @view("output_view")
   ...     def custom_view1(
   ...         outputs: Dict[str, DataFrame],
   ...     ) -> DataFrame:
   ...         ...
   ...     def create_custom_view2(arbitrary_param):
   ...         def custom_view2(outputs: Dict[str, DataFrame]) -> DataFrame:
   ...             assert arbitrary_param == ["a", "b"]
   ...             return outputs["output_df"].groupby(arbitrary_param).sum()
   ...         return custom_view2
   ...
   ...     views = [
   ...               View(
   ...                    name="another_output_view",
   ...                    func=create_custom_view2(["a", "b"])
   ...               )
   ...     ]
   ...     metrics = [
   ...         MedianRelativeError(
   ...             output="another_output_view",
   ...             measure_column="a_sum",
   ...             join_columns=["a"],
   ...         ),
   ...     ] # The view can be used instead of output when metric is defined






   .. py:property:: name
      :type: str

      Returns the name of the metric.

   .. py:property:: func
      :type: Callable

      Function that returns rhe actual view.


   .. automethod:: __init__

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: ErrorReport
   :canonical: tmlt.analytics.tuner._error_report.ErrorReport


   Output of a single error report run.

   .. note::

       |PRO_NOTE|


   This class is not intended to be constructed directly. Instead, it is returned by
   the :meth:`~.tuner.SessionProgramTuner.error_report` method.



   .. list-table:: Attributes

      * - :attr:`.tunable_values`
        - The values of the tunable parameters used for this error report.
      * - :attr:`.parameters`
        - The non-tunable parameters used for this error report.
      * - :attr:`.protected_inputs`
        - The protected inputs used for this error report.
      * - :attr:`.unprotected_inputs`
        - The unprotected inputs used for this error report.
      * - :attr:`.privacy_budget`
        - The privacy budget used for this error report.
      * - :attr:`.dp_outputs`
        - The differentially private outputs of the program.
      * - :attr:`.baseline_outputs`
        - The outputs of the baseline program.
      * - :attr:`.metric_results`
        - The metrics computed on the outputs of the dp and baseline programs.

   .. list-table:: Methods

      * - :meth:`.result_dataframes`
        - Return the result dataframes for each metric, keyed by the value column.
      * - :meth:`.format`
        - Return a string representation of this object.
      * - :meth:`.show`
        - Prints the error report in a nicely-formatted, human-readable way.



   .. py:attribute:: tunable_values
      :type:  Dict[str, Any]

      The values of the tunable parameters used for this error report.

   .. py:attribute:: parameters
      :type:  Dict[str, Any]

      The non-tunable parameters used for this error report.

   .. py:attribute:: protected_inputs
      :type:  Dict[str, ProtectedInput]

      The protected inputs used for this error report.

   .. py:attribute:: unprotected_inputs
      :type:  Dict[str, UnprotectedInput]

      The unprotected inputs used for this error report.

   .. py:attribute:: privacy_budget
      :type:  tmlt.analytics.privacy_budget.PrivacyBudget

      The privacy budget used for this error report.

   .. py:attribute:: dp_outputs
      :type:  Dict[str, pyspark.sql.DataFrame]

      The differentially private outputs of the program.

   .. py:attribute:: baseline_outputs
      :type:  Dict[str, Dict[str, pyspark.sql.DataFrame]]

      The outputs of the baseline program.

   .. py:attribute:: metric_results
      :type:  List[tmlt.analytics.metrics._base.MetricResult]

      The metrics computed on the outputs of the dp and baseline programs.



   .. py:method:: result_dataframes()

      Return the result dataframes for each metric, keyed by the value column.


   .. py:method:: format()

      Return a string representation of this object.


   .. py:method:: show()

      Prints the error report in a nicely-formatted, human-readable way.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: MultiErrorReport(reports)
   :canonical: tmlt.analytics.tuner._error_report.MultiErrorReport


   Output of an error report run across multiple input combinations.

   .. note::

       |PRO_NOTE|


   This class is not intended to be constructed directly. Instead, it is returned by
   the :meth:`~.tuner.SessionProgramTuner.multi_error_report` method.






   .. py:property:: reports
      :type: List[ErrorReport]

      Return the error reports.


   .. automethod:: __init__
   .. py:method:: __iter__()

      Return an iterator over the error reports.


   .. py:method:: result_dataframes()

      Return the result dataframes for each metric combined across runs.

      Each metric produces a separate dataframe. The  dataframes are keyed
      by the result column names.


   .. py:method:: dataframe()

      Return a dataframe representation of the error reports.

      The dataframe will have a row for each error report (run) and a column for each
      parameter and metric. If grouped metrics are specified, the dataframe will
      also have a row for the grouping columns.

      If not all metrics have the same (or no) grouping column, this will throw an
      error.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: UnprotectedInput
   :canonical: tmlt.analytics.tuner._error_report.UnprotectedInput


   Bases: :py:obj:`NamedTuple`

   An unprotected input that was used for an :class:`~.ErrorReport`.





   .. py:attribute:: name
      :type:  str

      The name of the input.

   .. py:attribute:: dataframe
      :type:  pyspark.sql.DataFrame

      A dataframe containing the unprotected data used for the report.




   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024

.. TODO(#3272): This prevents setting :canonical: on the copy of various docs
       that appear in the deprecated query_expr module; once that module is removed,
       this logic can go away.


.. py:class:: ProtectedInput
   :canonical: tmlt.analytics.tuner._error_report.ProtectedInput


   Bases: :py:obj:`NamedTuple`

   A protected input that was used for an :class:`~.ErrorReport`.

   .. warning::

       Note that normally ProtectedInputs are treated as sensitive and would not
       accessible to the user except through the :class:`~.session.Session` API to
       avoid violating differential privacy. But these error reports are not
       differentially private, and for this reason it is highly recommended to avoid
       using sensitive data in error reports, and to instead use synthetic data or
       other non-sensitive data.

       For these reasons, the protected inputs used in error reports are attached to
       the outputs for your convenience, but it is ultimately your responsibility to
       ensure that truly sensitive data is not used inappropriately.





   .. py:attribute:: name
      :type:  str

      The name of the input.

   .. py:attribute:: dataframe
      :type:  pyspark.sql.DataFrame

      A dataframe containing the protected data used for the report.

   .. py:attribute:: protected_change
      :type:  tmlt.analytics.protected_change.ProtectedChange

      What changes to the protected data the Session should protect.








